fixing the bug 0x2

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-# Site settings
-title: "Blogo de Mailj"
+﻿# Site settings
+title: Blogo de Mailj.
 SEOTitle: Mily的博客 | Blogo de Mailj
 header-img: img/home-bg.jpg
 email: northy360@126.com
